@@ -1,5 +1,9 @@
 English Lead ChangeLog
 
+***** ChangeLog for 1.16 compared to 1.15 *****
+NEW : Only for 5.0 with good list management
+NEW : Can create contract from lead
+
 ***** ChangeLog for 1.15 compared to 1.14 *****
 FIX : error into log on addSearchEntry hook
 
